Fixing display of front page when window is scrollable. Previously, the buttons were no visible against a white background.

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -254,3 +254,7 @@ h1.front-head {
 	font-weight: 100;
 	color: white;
 }
+
+.mainbg {
+	background-color: $maincolor;
+}
